# learning-repo-proj

./: .gitignore  LICENSE  README.md
basc-calc/: calc.py  pyproject.toml
base-temp/: pyproject.toml  temp-vert.py
