[tool.poetry]
name = "basc-calc"
version = "0.1.0"
description = ""
authors = ["icarus <cesardedios94@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "basc_calc"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
